--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@ modal.style.display = "none";
     </main>
 
     <footer>
-        <p>credits ...</p>
+        <p>Lorem ipsum dolor sit amet. Ut voluptatem atque et quasi corrupti et voluptas architecto in dignissimos
+          <br> Coded by Titouan Frequelin, Julien Becheras, Alexis Chabanne, Maël Garnier
+        </p>
     </footer>
     
 </body>
