--- a/home.html
+++ b/home.html
@@ -26,6 +26,8 @@
     </header>
     <main>
 
+    <a class="backToTop" href="#">></a>
+
       <section id="aboutUs">
         <h1 class="title">
         About us
